maze.lessons.maze.island.IslandMaze.scala.error
Escaper:10: error: ')' expected but ';' found.
		else {(gauche(); gauche(); avance(); droite())}
                               ^Escaper:10: error: ';' expected but ')' found.
		else {(gauche(); gauche(); avance(); droite())}
                                                             ^